Update notebook introduction with SDK version info

--- a/bert_reranker_inference.ipynb
+++ b/bert_reranker_inference.ipynb
@@ -15,7 +15,7 @@
                 "\n",
                 "This notebook demonstrates how to compile and run the [Alibaba-NLP/gte-multilingual-reranker-base](https://huggingface.co/Alibaba-NLP/gte-multilingual-reranker-base) BERT reranker model for accelerated inference on AWS Neuron (Inferentia2/Trainium).\n",
                 "\n",
-                "This notebook was tested on an **inf2.8xlarge** instance."
+                "This notebook was tested on an **inf2.8xlarge** instance with SDK 2.27 2/19/2026."
             ]
         },
         {
