--- a/distilbert_triton_trainium2_executed.ipynb
+++ b/distilbert_triton_trainium2_executed.ipynb
@@ -1,1 +1,24 @@
-moved to https://github.com/jimburtoft/NeuronStuff/tree/main/distilbert
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Moved to https://github.com/jimburtoft/NeuronStuff/tree/main/distilbert"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
